Entry point for the profiler library

--- a/src/profiler/profiler.vcxproj
+++ b/src/profiler/profiler.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="profiler.cpp" />
   </ItemGroup>
   <ItemGroup>
