VISUALIZATION: Nice images on buttons

--- a/src/visualizer/OctoVis/OctoVis/OctoVis.csproj
+++ b/src/visualizer/OctoVis/OctoVis/OctoVis.csproj
@@ -12,4 +12,13 @@
       <PackageReference Include="LiveChartsCore.SkiaSharpView.WPF" Version="2.0.0-rc2" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Resource Include="Images\log.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Resource>
+      <Resource Include="Images\profile.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Resource>
+    </ItemGroup>
+
 </Project>
