BACKEND: Start building the events sink

--- a/src/profiler/OctoProfiler.vcxproj
+++ b/src/profiler/OctoProfiler.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="OctoProfiler.h" />
     <ClInclude Include="OctoProfilerEnterLeave.h" />
     <ClInclude Include="OctoProfilerFactory.h" />
+    <ClInclude Include="OctoSink.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="OctoProfiler.def" />
