--- a/src/profiler/OctoProfiler.vcxproj.filters
+++ b/src/profiler/OctoProfiler.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="OctoProfilerEnterLeave.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="OctoSink.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="OctoProfiler.def" />
